--- a/EventCenter.html
+++ b/EventCenter.html
@@ -81,6 +81,16 @@
           </tr>
       </table>
     </section>
+    <!-- Location Page -->
+    <section id="location">
+      <h5>Location</h5>
+      <p>123 Fairgrounds Rd, San Bernardino, CA 92408
+        <br>
+        monday - friday: 10am - 8pm
+      </p>
+      <br>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105663.75305757715!2d-117.30409205000001!3d34.14653955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c3537de2fdb8f3%3A0x2867c6788c87c28d!2sSan%20Bernardino%2C%20CA!5e0!3m2!1sen!2sus!4v1749356377473!5m2!1sen!2sus" width="550" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
   </main>
 </body>
 </html>
